--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ VEXOR_API_KEY=vx_prod_sk_ba7a43ed8a3a58ef2f346b51919fa132_35a57303_7aca_4216_9ab
 VEXOR_PROJECT_ID=682f7b3ef5129b910b4633a2
 
 
+DB_DATABASE=newstylegym_database
+DB_USERNAME=newstylegym_database_user
+DB_PASSWORD=PfhE3U8pXZMXNJXuAltLinsTTvGfc3jt
+DB_HOST=dpg-d0qrds2dbo4c73cc94c0-a
 
-DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=postgres
-DB_NAME=postgres
-DIALECT=postgres
-DB_PASSWORD=tu_contraseña
+DB_DIALECT=postgres
