--- a/.env
+++ b/.env
@@ -8,5 +8,7 @@ DB_USERNAME=newstylegym_database_user
 DB_PASSWORD=PfhE3U8pXZMXNJXuAltLinsTTvGfc3jt
 DB_HOST=dpg-d0qrds2dbo4c73cc94c0-a
 
+API_URL = https://newstylegym-back.onrender.com
+
 DB_PORT=5432
 DB_DIALECT=postgres
