--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ VEXOR_PUBLISHABLE_KEY=vx_prod_pk_5d1399f19dadbeb1a57adcba5e1529fe_daa26625_14ee_
 VEXOR_API_KEY=vx_prod_sk_ba7a43ed8a3a58ef2f346b51919fa132_35a57303_7aca_4216_9ab3_6efe36ad812c_9ff615
 VEXOR_PROJECT_ID=682f7b3ef5129b910b4633a2
 
+DATABASE_URL= postgresql://newstylegym_database_user:PfhE3U8pXZMXNJXuAltLinsTTvGfc3jt@dpg-d0qrds2dbo4c73cc94c0-a.oregon-postgres.render.com/newstylegym_database
 
+MERCADO_PAGO_ACCESS_TOKEN=APP_USR-6873100345219151-052215-3db26a9b390a78fbf929b41ffda94acf-1286636359
 DB_DATABASE=newstylegym_database
 DB_USERNAME=newstylegym_database_user
 DB_PASSWORD=PfhE3U8pXZMXNJXuAltLinsTTvGfc3jt
