--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ DB_DATABASE=newstylegym_database
 DB_USERNAME=newstylegym_database_user
 DB_PASSWORD=PfhE3U8pXZMXNJXuAltLinsTTvGfc3jt
 DB_HOST=dpg-d0qrds2dbo4c73cc94c0-a
-VITE_API_URL=localhost:3000
-# VITE_API_URL=https://newstylegym-back.onrender.com
+
+VITE_API_URL=https://newstylegym-back.onrender.com
 
 DB_PORT=5432
 DB_DIALECT=postgres
